--- a/site/index.html
+++ b/site/index.html
@@ -1,1 +1,56 @@
-html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Hello</title>
+</head>
+
+
+<body>
+<h1 style="color:red;">Hi</h1>
+<button>
+<a href="https://youtu.be/gtHkKZi7FJg">Click Me!</a>
+</button>
+<h2>I am with you forever</h2>
+<footer>
+	<p>I will be with you forever</p>
+</footer>
+
+</body>
+<style>
+	button {height: 100px;
+		color: green;
+	margin:10px;
+	border-color: yellow;
+	border-radius: 10px;
+	}
+	a {margin:135px;
+		color:black;
+		height:100px;  }
+	h1{margin-left:178px;
+		border: 10px;
+		border-color: green;}
+		h2{
+			margin-left: 115px;
+		}
+	button:hover {
+		background-color: lightgreen;
+	}
+	
+  }
+  h1section {
+  display: -webkit-flex;
+  display: flex;
+}h2 {
+  display: -webkit-flex;
+  display: flex;
+}
+footer {
+margin-top: 500px;
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+</style>
+
+</html>
