--- a/site/index.html
+++ b/site/index.html
@@ -2,55 +2,37 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="style.css">
+	
 	<title>Hello</title>
 </head>
-
-
+<style>
+body{
+		background-image: url("b.jpeg");
+	}
+</style>
 <body>
-<h1 style="color:red;">Hi</h1>
-<button>
-<a href="https://youtu.be/gtHkKZi7FJg">Click Me!</a>
-</button>
-<h2>I am with you forever</h2>
+
+	<div class="w3-bar w3-border w3-light-grey">
+  <div class="w3-bar-item">Happiest</div>
+  <div class="w3-bar-item">20th</div>
+  <div class="w3-bar-item">Birthday</div>
+</div>
+<h1 style="color:red;">Finally the day has come for which I've been eagerly waiting for.</h1>
+<div class="w3-container">
+	
+<a   href="https://github.com/Bhargab26/Birthday/tree/master/site" class="w3-button w3-black" >Click me</a>
+</div>
+
+
+
 <footer>
 	<p>I will be with you forever</p>
+	
 </footer>
 
 </body>
-<style>
-	button {height: 100px;
-		color: green;
-	margin:10px;
-	border-color: yellow;
-	border-radius: 10px;
-	}
-	a {margin:135px;
-		color:black;
-		height:100px;  }
-	h1{margin-left:178px;
-		border: 10px;
-		border-color: green;}
-		h2{
-			margin-left: 115px;
-		}
-	button:hover {
-		background-color: lightgreen;
-	}
-	
-  }
-  h1section {
-  display: -webkit-flex;
-  display: flex;
-}h2 {
-  display: -webkit-flex;
-  display: flex;
-}
-footer {
-margin-top: 500px;
-  background-color: #777;
-  padding: 10px;
-  text-align: center;
-  color: white;
-</style>
+
 
 </html>
