--- a/site/index.html
+++ b/site/index.html
@@ -7,21 +7,30 @@
 	
 	<title>Hello</title>
 </head>
-<style>
-body{
-		background-image: url("b.jpeg");
-	}
-</style>
 <body>
-
-	<div class="w3-bar w3-border w3-light-grey">
-  <div class="w3-bar-item">Happiest</div>
-  <div class="w3-bar-item">20th</div>
-  <div class="w3-bar-item">Birthday</div>
+	<div class="w3-bar w3-border w3-#7FFFD4">
+  <div class="w3-bar-item" style="font-size: 15px;
+		font-style: bold;
+		margin-left: 21px;
+		color: red;
+		text-transform: uppercase;
+  text-shadow: 2px 2px 4px yellow;">Happiest</div>
+  <div class="w3-bar-item" style="font-size: 15px;
+		font-style: bold;
+		margin-left: 21px;
+		color: red;
+		text-transform: uppercase;
+  text-shadow: 2px 2px 4px yellow;">20th</div>
+  <div class="w3-bar-item" style="font-size: 15px;
+		font-style: bold;
+		margin-left: 21px;
+		color: red;
+		text-transform: uppercase;
+  text-shadow: 2px 2px 4px yellow;">Birthday</div>
 </div>
-<h1 style="color:red;">Finally the day has come for which I've been eagerly waiting for.</h1>
-<div class="w3-container">
-	
+<h1 style="color:white;">Finally the day has come for which I've been eagerly waiting for.</h1>
+<h2>Do you want to know how much you mean to me?</h2>
+	<h3>Click on the button bellow.</h3>
 <a   href="https://github.com/Bhargab26/Birthday/tree/master/site" class="w3-button w3-black" >Click me</a>
 </div>
 
@@ -31,6 +40,14 @@ body{
 	<p>I will be with you forever</p>
 	
 </footer>
+<div class="center">
+<div class="pagination">
+  <a href="#">&laquo;</a>
+  <a href="#">1</a>
+  <a href="#">2</a>
+  <a href="#">3</a>
+  <a href="#">&raquo;</a>
+</div>
 
 </body>
 
