--- a/site/index.html
+++ b/site/index.html
@@ -28,10 +28,10 @@
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Birthday</div>
 </div>
-<h1 style="color:white;">Finally the day has come for which I've been eagerly waiting for.</h1>
+<h1 style="color:white;">FInally the day has come.</h1>
 <h2>Do you want to know how much you mean to me?</h2>
 	<h3>Click on the button bellow.</h3>
-<a   href="https://github.com/Bhargab26/Birthday/tree/master/site" class="w3-button w3-black" >Click me</a>
+<a  style="margin-top: 20px;"  href="https://github.com/Bhargab26/Birthday/tree/master/site" class="w3-button w3-black w3-center" >Click me</a>
 </div>
 
 
