--- a/site/index.html
+++ b/site/index.html
@@ -5,32 +5,34 @@
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet" href="style.css">
 	
-	<title>Hello</title>
+	<title>Happy Birthday Mridula</title>
 </head>
 <body>
 	<div class="w3-bar w3-border w3-#7FFFD4">
   <div class="w3-bar-item" style="font-size: 15px;
 		font-style: bold;
-		margin-left: 21px;
+		margin-left: 24px;
 		color: red;
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Happiest</div>
   <div class="w3-bar-item" style="font-size: 15px;
 		font-style: bold;
-		margin-left: 21px;
+		margin-left: 24px;
 		color: red;
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">20th</div>
   <div class="w3-bar-item" style="font-size: 15px;
 		font-style: bold;
-		margin-left: 21px;
+		margin-left: 24px;
 		color: red;
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Birthday</div>
 </div>
-<h1 style="color:white;">FInally the day has come.</h1>
+<h1 class="glow" style="color:yellow; text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px yellow;">This is from where everything started.</h1>
+<img src="ilu.jpg" alt="love" style="width:25%;">
 <h2>Do you want to know how much you mean to me?</h2>
 	<h3>Click on the button bellow.</h3>
+
 <a  style="margin-top: 20px;"  href="https://github.com/Bhargab26/Birthday/tree/master/site" class="w3-button w3-black w3-center" >Click me</a>
 </div>
 
