--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@
 <h2>Do you want to know how much you mean to me?</h2>
 	<h3>Click on the button bellow.</h3>
 
-<a  style="margin-top: 20px;"  href="https://github.com/Bhargab26/Birthday/tree/master/site" class="w3-button w3-black w3-center" >Click me</a>
+<a  style="margin-top: 20px;"  href="https://bhargab26.github.io/birthday1/site/index1.html" class="w3-button w3-black w3-center" >Click me</a>
 </div>
 
 
