--- a/site/index.html
+++ b/site/index.html
@@ -28,10 +28,11 @@
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Birthday</div>
 </div>
-<h1 class="glow" style="color:yellow; text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px yellow;">This is from where everything started.</h1>
+<h1 class="glow" style="color:SlateBlue; text-shadow: 1px 1px 2px green, 0 0 25px blue, 0 0 5px yellow; font: bold 22px/40px Georgia, serif;;">This is from where everything started.</h1>
 <img src="ilu.jpg" alt="love" style="width:50%;">
 <h2>Do you want to know how much you mean to me?</h2>
-	<h3>Click on the button bellow.</h3>
+	<h3>
+Click on the button bellow.</h3>
 
 <a  style="margin-top: 20px;"  href="https://bhargab26.github.io/bday/site/" class="w3-button w3-black w3-center" >Click me</a>
 </div>
@@ -45,8 +46,8 @@
 <div class="center">
 <div class="pagination">
   <a href="#">&laquo;</a>
-  <a href="#">1</a>
-  <a href="#">2</a>
+  <a href="https://bhargab26.github.io/Birthday/site/">1</a>
+  <a href="https://bhargab26.github.io/bday/site/">2</a>
   <a href="#">3</a>
   <a href="#">&raquo;</a>
 </div>
