--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
 	<link rel="stylesheet" href="style.css">
 	
 	<title>Happy Birthday Mridula</title>
@@ -11,7 +12,7 @@
 	<div class="w3-bar w3-border w3-#7FFFD4">
   <div class="w3-bar-item" style="font-size: 15px;
 		font-style: bold;
-		margin-left: 24px;
+		margin-left: 30px;
 		color: red;
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Happiest</div>
@@ -28,8 +29,12 @@
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Birthday</div>
 </div>
-<h1 class="glow" style="color:SlateBlue; text-shadow: 1px 1px 2px green, 0 0 25px blue, 0 0 5px yellow; font: bold 22px/40px Georgia, serif;;">This is from where everything started.</h1>
+<h1 class="glow" style="color:SlateBlue;  font: bold 22px/40px Sofia, serif;;">This is from where everything started.</h1>
 <img src="ilu.jpg" alt="love" style="width:50%;">
+<p style="text-align: center; font: bold 20px/35px Georgia; color: red;
+  text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px yellow;">Which led to this....</p>
+  <img src="mk.jpg" alt="love" style="width:50%;">
+
 <h2>Do you want to know how much you mean to me?</h2>
 	<h3>
 Click on the button bellow.</h3>
@@ -40,7 +45,7 @@ Click on the button bellow.</h3>
 
 
 <footer>
-	<p>I will be with you forever</p>
+	<p>I will be with you forever.</p>
 	
 </footer>
 <div class="center">
