--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
 		text-transform: uppercase;
   text-shadow: 2px 2px 4px yellow;">Birthday</div>
 </div>
-<h1  style="color:SlateBlue;  font: bold 22px/40px Sofia, serif;;">This is from where everything started.</h1>
+<h1  style="color:SlateBlue; text-align: center; font: bold 22px/40px Sofia, serif;;">This is from where everything started.</h1>
 <img src="ilu.jpg" alt="love" style="width:50%;">
 <p style="text-align: center; font: bold 20px/35px Georgia; color: red;
   text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px yellow;">Which led to this....</p>
