--- a/site/index.html
+++ b/site/index.html
@@ -53,8 +53,8 @@ Click on the button bellow.</h3>
   <a href="#">&laquo;</a>
   <a href="https://bhargab26.github.io/Birthday/site/">1</a>
   <a href="https://bhargab26.github.io/bday/site/">2</a>
-  <a href="#">3</a>
-  <a href="#">&raquo;</a>
+  <a href="https://bhargab26.github.io/mk/site/">3</a>
+  <a href="https://bhargab26.github.io/bday/site/">&raquo;</a>
 </div>
 
 </body>
